Changed banner and page layout, fixed contrast issues

--- a/lesson02/styles/design.css
+++ b/lesson02/styles/design.css
@@ -9,7 +9,7 @@ footer {
 	margin: 0 auto;
 }
 
-marquee {
+div.banner {
 	padding: 1rem;
 	background-color: #eee;
 }
@@ -20,11 +20,14 @@ h1 {
 
 main {
 	display: grid;
+    grid-template-columns: 1fr 100px;
+    grid-gap: 1.5rem;
 }
 
 h2 {
 	color: navy;
-	text-align: center;
+	text-align: left;
+    grid-column: 1/3;
 }
 
 article p {
@@ -32,13 +35,15 @@ article p {
 }
 
 .callout {
-	color: #777;
+	color: yellow;
 	background-color: #702963;
+    padding: 1rem;
+    grid-column: 1/3;
 }
 
 footer {
 	margin-top: 1rem;
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	font-size: smaller;
-	text-align: right;
+	text-align: left;
 }
